apollo-router/src/configuration/snapshots/apollo_router__configuration__upgrade__test__connectors_subgraphs_merges_with_existing_sources_and_existing_wins.snap
---
source: apollo-router/src/configuration/upgrade.rs
expression: config
---
{
  "connectors": {
    "sources": {
      "sub_a.src_1": {
        "override_url": "http://new"
      },
      "sub_a.src_2": {
        "override_url": "http://two"
      }
    }
  }
}
