apollo-router/src/configuration/snapshots/apollo_router__configuration__upgrade__test__connectors_subgraphs_merges_with_existing_sources_deprecated_fields_win.snap
---
source: apollo-router/src/configuration/upgrade.rs
expression: config
---
{
  "connectors": {
    "sources": {
      "sub_a.src_1": {
        "override_url": "http://old",
        "max_requests_per_operation": 3
      },
      "sub_a.src_2": {
        "max_requests_per_operation": 7,
        "override_url": "http://two"
      }
    }
  }
}
