apollo-router/src/configuration/snapshots/apollo_router__configuration__upgrade__test__connectors_subgraphs_subgraph_config_overwrites_source_config.snap
---
source: apollo-router/src/configuration/upgrade.rs
expression: config
---
{
  "connectors": {
    "sources": {
      "sub_a.src_1": {
        "$config": {
          "key": "from-subgraph"
        }
      }
    }
  }
}
