apollo-router/src/configuration/snapshots/apollo_router__configuration__upgrade__test__diff_upgrade_output.snap
---
source: apollo-router/src/configuration/upgrade.rs
expression: "generate_upgrade_output(\"changed: bar\\nstable: 1.0\\ndeleted: gone\",\n        \"changed: bif\\nstable: 1.0\\nadded: new\",\n        true).expect(\"expected successful migration\")"
---
-changed: bar
+changed: bif
 stable: 1.0
-deleted: gone
+added: new

