apollo-router/src/configuration/snapshots/apollo_router__configuration__upgrade__test__move_non_existent_field.snap
---
source: apollo-router/src/configuration/upgrade.rs
expression: "apply_migration(&json!({ \"should\" : \"stay\" }),\n        &Migration::builder().action(Action::Move {\n                            from: \"obj.field1\".to_string(),\n                            to: \"new.obj.field1\".to_string(),\n                        }).description(\"move field1\").build()).expect(\"expected successful migration\")"
---
{
  "should": "stay"
}
