apollo-router/src/configuration/snapshots/apollo_router__configuration__upgrade__test__upgrade_output.snap
---
source: apollo-router/src/configuration/upgrade.rs
expression: "generate_upgrade_output(\"changed: bar\\nstable: 1.0\\ndeleted: gone\",\n        \"changed: bif\\nstable: 1.0\\nadded: new\",\n        false).expect(\"expected successful migration\")"
---
changed: bif
stable: 1.0
added: new

